[gd_scene load_steps=2 format=3 uid="uid://w8sn0822ekij"]

[ext_resource type="Script" path="res://code/multiplayer_test.gd" id="1_63j3e"]

[node name="multiplayer_test" type="Node"]
script = ExtResource("1_63j3e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -15.5
offset_right = 18.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "join"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -80.0
offset_right = 24.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
text = "host"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player_teleportation.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
